[package]
name = "seetui"
version = "0.1.7"
edition = "2024"
description = "TUI based tool to lookup logs from services (systemd) with Vi Motions"
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/NustyFrozen/SEE"


[dependencies]
ratatui = "0.30.0"
chrono = { version = "0.4", features = ["serde"] }
journald = "0.7.0"
crossterm = "0.29.0"
color-eyre = "0.6.5"
tokio = {version= "1.50.0",features = ["full"]}
regex = "1.12.3"
futures = "0.3.32"
clap = {version= "4.6.0",features = ["derive"]}
arboard = "3.6.1"
tui-tabs = "0.1"
tui-slider = "0.3.2"
