[package]
name = "SEE"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
systemd = "0.10.1"
journald = "0.7.0"
crossterm = "0.29.0"
color-eyre = "0.6.5"
tokio = {version= "1.50.0",features = ["full"]}
regex = "1.12.3"
futures = "0.3.32"
